--- a/kubernetes_deploy/ingress.yaml
+++ b/kubernetes_deploy/ingress.yaml
@@ -3,14 +3,12 @@ kind: Ingress
 metadata:
   name: multi-container-demo
   annotations:
-    nginx.ingress.kubernetes.io/auth-type: basic
-    nginx.ingress.kubernetes.io/auth-secret: basic-auth
 spec:
   tls:
   - hosts:
-    - multi-container-demo.apps.live-1.cloud-platform.service.justice.gov.uk
+    - jb-multi-container-demo.apps.jb-test-6.cloud-platform.service.justice.gov.uk
   rules:
-  - host: multi-container-demo.apps.live-1.cloud-platform.service.justice.gov.uk
+  - host: jb-multi-container-demo.apps.jb-test-6.cloud-platform.service.justice.gov.uk
     http:
       paths:
       - path: /
